[package]
name = "day-07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5.0"
itertools = "0.12.0"
glam = "0.24.2"
miette = "5.10.0"
nom = "7.1.3"
nom_locate = "4.2.0"
thiserror = "1.0.50"
tracing = "0.1.40"
