[package]
name = "day-25"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "x86_64")']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-linalg = "0.16.0"
ndarray = "0.15.6"
glam = "0.25"
itertools = "0.12.0"
miette = "5.10.0"
nom = "7.1.3"
nom_locate = "4.2.0"
thiserror = "1.0.50"
tracing = "0.1.40"
petgraph = "0.6"
rustworkx-core = "0.13.2"
